# legend_of_the_puzzle

./: CMakeLists.txt
SFML_Raylib/SFML/: Graphics.hpp  System.hpp  sfml.cpp
SFML_Raylib/SFML/priv/: maths.h  rl.h
assets/: linksAwakeningOutdoors.json
assets/data/: enemy_data.json  grayscale.frag  sounds_to_load.json
assets/rooms/: map cascata.json  map desert.json  map isola.json  map passaggio segreto 2.json  map spiaggia.json  worldmap.json
data/: player_data.json
libs/raylib/src/: raylib.h  raymath.h  raytypes.h
rooms/: map alto dx.json  map isola bassa.json  map isola blu bassa.json  map isola blu sx.json  map isola blu.json  map isola dx.json  map isola sx.json  map passaggio deserto spiaggia.json  map passaggio isola blu.json  map passaggio segreto 3.json  map segreto 1.json  map segreto 4.json  map segreto 5.json  map segreto ghiaccio 1.json  map.json  plateau.json
src/: Main.cpp  Map_room.cpp  Map_room.h  Player.cpp  Player.h  PlayerGUI.h  camera.cpp  camera.h  gui.cc  gui.h  main.cc  maths.h  node.h  rl.h  system.cc  system.h  timer.h  tracelog.c  tracelog.h  tween.h
src/Framework/: Animation.cpp  Animation.h  Collision.cpp  Collision.h  EventManager.cpp  EventManager.h  FiniteStateMachine.h  GameObject.h  InputHandler.h  Interactable.cpp  Interactable.h  Leaderboard.h  Projectiles.cpp  Projectiles.h  Room.cpp  Room.fwd.h  Room.h  RoomManager.cpp  RoomManager.fwd.h  RoomManager.h  TextBox.cpp  TextBox.h  TileMap.cpp  TileMap.h  Tweening.h  UsefulFunctions.h  Weapon.cpp  Weapon.h  sprite.h
src/Framework/Events/: EVENTfadeinout.cpp  EVENTfadeinout.h  EVENTgetpiece.cpp  EVENTgetpiece.h  EVENTmenu.cpp  EVENTmenu.h  EVENTmoveto.cpp  EVENTmoveto.h  EVENTsay.cpp  EVENTsay.h  EVENTwait.h  EVENTwin.cpp  EVENTwin.h  Event.h
src/Framework/GUI/: GUIbox.cpp  GUIbox.h  GUIbutton.cpp  GUIbutton.h  GUIcallback.h  GUIcheckbox.cpp  GUIcheckbox.h  GUIelement.cpp  GUIelement.h  GUIhorizontalalign.h  GUImanager.cpp  GUImanager.h  GUIpanel.h  GUIslider.h  GUIsplashscreen.h  GUItext.h  GUItiledelement.cpp  GUItiledelement.h  GUIverticalalign.h
src/GameObjects/: Enemy.cpp  Enemy.h  ManObject.cpp  ManObject.h  Octorock.cpp  Octorock.h
src/Interactables/: ManInteractable.cpp  ManInteractable.h  Statue.cpp  Statue.h
src/JSONparser/: JSONparser.cpp  JSONparser.h
src/Menus/: ControlsMenu.cpp  ControlsMenu.h  DeathScreen.cpp  DeathScreen.h  DebugMenu.cpp  DebugMenu.h  Ending.cpp  Ending.h  LeaderboardMenu.cpp  LeaderboardMenu.h  MainMenu.cpp  MainMenu.h  MainScreen.cpp  MainScreen.h  Option.cpp  Option.h  PauseMenu.cpp  PauseMenu.h  SplashScreens.cpp  SplashScreens.h
src/gfx/: nineslice.cc  nineslice.h  sprite.cc  sprite.h  text.cc  text.h
src/screens/: controls_screen.cc  controls_screen.h  credits_screen.h  debug_menu.h  leaderboard_screen.h  main_menu.cc  main_menu.h  map_screen.h  options_screen.cc  options_screen.h  pause_menu.h  splash_screen.h  start_screen.h
